--- a/styles.css
+++ b/styles.css
@@ -7,18 +7,83 @@ body {
   display: flex;
   flex-direction: column;
   align-items: center;
+  padding: 3rem;
+}
+
+.image-gallery {
+  display: flex;
+  flex-wrap: wrap;
+  row-gap: 3rem;
+  column-gap: 3rem;
+  justify-content: center;
 }
 
 img {
-  width: 100%;
+  width: 300px;
+  height: 300px;
   max-width: 400px;
   max-height: 400px;
   border-radius: 10px;
-  object-fit: cover;
+  flex-grow: 1;
+}
+
+.image-gallery {
+  margin-top: 2rem;
+}
+
+.img-0 {
+  background: URL('./dog-0.jpeg');
+  background-size: cover;
+}
+.img-1 {
+  background: URL('./dog-1.jpeg');
+  background-size: cover;
+}
+.img-2 {
+  background: URL('./dog-2.jpeg');
+  background-size: cover;
+}
+.img-3 {
+  background: URL('./dog-3.jpeg');
+  background-size: cover;
 }
 
 h1 {
   text-align: center;
+}
+
+.custom-select {
+  position: relative;
+  display: inline-block;
+  font-size: 1.5rem;
+
+}
+
+.custom-select select {
+  display: block;
+  width: 100%;
+  padding: 10px;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+  appearance: none;
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  background-color: #fff;
+  cursor: pointer;
+  font-size: 1.25rem;
+}
+
+.custom-select select:focus {
+  outline: none;
+}
+
+.custom-select::after {
+  content: '\25BC';
+  position: absolute;
+  top: 50%;
+  right: 10px;
+  transform: translateY(-50%);
+  pointer-events: none;
 }
 
 button {
@@ -40,4 +105,8 @@ button:hover {
 
 button:active {
   box-shadow: none;
+}
+
+footer {
+  margin-top: 5rem;
 }
