improves selection functionality

--- a/styles.css
+++ b/styles.css
@@ -7,7 +7,12 @@ body {
   display: flex;
   flex-direction: column;
   align-items: center;
-  padding: 3rem;
+  justify-content: space-between;;
+  height: 100vh;
+}
+
+.app-content {
+  text-align: center;
 }
 
 .image-gallery {
@@ -90,6 +95,12 @@ h1 {
   pointer-events: none;
 }
 
+.more-dogs {
+  display: none;
+  text-align: center;
+  margin: 1rem auto;
+}
+
 button {
   padding: 1rem 2rem;
   text-transform: uppercase;
@@ -112,5 +123,33 @@ button:active {
 }
 
 footer {
-  margin-top: 5rem;
+  width: 100%;
+  padding: 0.5rem 0;
+  background: #404ea00f;
+}
+
+footer p, footer small {
+  text-align: center;
+}
+
+footer a {
+  color: #39457b;
+  text-decoration: none;
+  font-weight: 500;
+}
+
+footer .fa-terminal{
+  animation: terminal-animate 1.5s infinite;
+}
+
+@keyframes terminal-animate {
+  0% {
+    opacity: 1;
+  }
+  25% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
 }
